# nfl-de-home

./: .env.deploy.example  .env.example  .gitignore  .mcp.json  DEPLOYMENT.md  INSTALL_WINDOWS.txt  README.md  STATUS.md  next.config.js  package-lock.json  package.json  playwright.config.ts  push_to_github.ps1  railway.json  setup_supabase_mcp.ps1  tailwind.config.ts  vercel.json  vitest.config.ts
.claude/: settings.local.json
.claude/commands/: deploy.md
.github/workflows/: ci.yml  scrape-cron.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: auth.py  config.py  db.py  main.py  schemas.py
docs/: PRD.md  architecture.md  design.md  security.md  seo.md  tech-stack.md
e2e/: landing.spec.ts
realtime/: .env.example  package.json  server.js
scrapers/: .env.example  common.py  espn_schedule.py  nfl_news.py  nflverse_pbp.py  nflverse_releases.py  pfr_stats.py  pyproject.toml  run_all.py  sleeper_players.py  thesportsdb_teams.py  translate.py  youtube_team_feeds.py
scripts/: deploy.sh
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/app/(auth)/: layout.tsx
src/data/: team-media.ts
src/lib/: mock-data.ts  supabase.ts  utils.test.ts
src/types/: index.ts
supabase/: _all_migrations_combined.sql
supabase/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql  0003_seed.sql  0004_remove_pro.sql  0005_advanced_stats.sql  0006_rosters_depth_charts_injuries.sql  0007_team_videos.sql  0008_articles_team_link.sql  0009_all_32_teams.sql
(+45 files in other folders)
