[project]
name = "nfl-de-fan-hub-api"
version = "0.1.0"
description = "FastAPI backend for NFL-DE-Fan Hub"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "supabase>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
